# Conduit

./: .gitignore  README.md  docker-compose.yml  ruff.toml
.github/workflows/: cd.yml  ci.yml
console/: index.html  package-lock.json  package.json  vite.config.ts
console/coverage/: clover.xml  coverage-final.json  index.html
console/coverage/components/ui/: Badge.tsx.html  Button.tsx.html  Card.tsx.html  PageHeader.tsx.html  index.html
console/coverage/lib/: index.html  utils.ts.html
console/src/: App.tsx  index.css
console/src/components/: CommandCenter.tsx  CommandPalette.tsx  ThemeProvider.tsx
console/src/components/integrations/: AssetDrawer.tsx  IntegrationDialog.tsx
console/src/components/layout/: AppLayout.tsx  ThemeToggle.tsx
console/src/components/ui/: Badge.tsx  (+14 more)
console/src/hooks/: useAudit.ts  useAuth.ts  useLineage.ts  useMetrics.ts  usePipelineOps.ts  usePreview.ts  useQuarantine.ts  useQueryAction.ts  useRunOps.ts  useSchedule.ts  useWebSocket.ts
console/src/lib/: api.ts  button-variants.ts  constants.ts  theme-context.ts
console/src/pages/: AuditLog.tsx  Dashboard.tsx  IntegrationDetail.tsx  Integrations.tsx  Lineage.tsx  Login.tsx  NotFound.tsx  PipelineDetail.tsx  Pipelines.tsx  Quarantine.tsx  RunDetail.tsx  Runs.tsx  Settings.tsx
console/src/tests/: setup.ts
console/src/types/: api.ts
runner/: pyproject.toml
runner/src/conduit/runner/: __init__.py  cli.py  main.py
runner/tests/: test_cli.py  test_daemon.py  test_main_branches.py
server/: .env.example  coverage-server.xml  main.py  pyproject.toml
server/app/: __init__.py  config.py  logging.py  main.py
server/app/api/dependencies/: auth.py  services.py
server/app/api/v1/: router.py
server/app/api/v1/endpoints/: audit.py  auth.py  integrations.py  lineage.py  metrics.py  pipeline_ops.py  pipelines.py  preview.py  processors.py  quarantine.py  runs.py  schedules.py  system.py  workspaces.py  ws.py
server/app/infra/database/: session.py
server/app/infra/database/models/: __init__.py  base.py  execution.py  identity.py  integrations.py  pipelines.py  quality.py
server/app/infra/database/repositories/: asset.py  audit_log.py  base.py  integration.py  member.py  pipeline.py  quarantine.py  run.py  runner.py  user.py  workspace.py
server/app/services/: audit.py  auth.py  integration.py  lineage.py  metrics.py  notification.py  pipeline.py  quarantine.py  run.py  scheduler.py  user.py  vault.py  workspace.py
server/migrations/: env.py
server/migrations/versions/: 0934c3ad49ae_add_config_to_integration.py  a1b2c3d4e5f6_expand_asset_type_constraint.py  ed327d0cf6e9_initial_schema.py
server/tests/: conftest.py  test_all_repositories.py  test_all_services.py  test_api.py  test_placeholder.py  test_repositories.py  test_services.py
tools/: cli.py  pyproject.toml
(+14 files in other folders)
