[tool.poetry]
name = "conduit-server"
version = "0.1.0"
description = "Conduit Backend API"
authors = ["Abhishek <abhishek@example.com>"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
sqlalchemy = "^2.0.27"
asyncpg = "^0.29.0"
alembic = "^1.13.1"
pydantic = "^2.6.1"
pydantic-settings = "^2.1.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.9"
httpx = "^0.27.0"
structlog = "^24.1.0"
conduit-domain = {path = "../packages/domain", develop = true}
conduit-engine = {path = "../packages/engine", develop = true}
redis = "^5.0.0"
greenlet = "^3.0.0"
croniter = "^2.0.0"
email-validator = "^2.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.5"
pytest-cov = "^4.1.0"
ruff = "^0.3.0"
anyio = "^4.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = ["migrations", ".venv", "tests"] # Exclude tests too if they are noisy, or keep them? keep them for quality.
ignore-init-module-imports = true

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
# B008: Depends() in defaults is standard FastAPI
# E501: Line too long (managed by formatter usually, but good to ignore in specific cases)
ignore = ["B008", "E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
